# client/openapi.json
@@ -1,22 +1,6 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/health": {
-      "get": {
-        "operationId": "getMinFactoryHealth",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "summary": "",
-        "tags": ["minFactory"]
-      }
-    },
     "/minrps/health": {
       "get": {
         "operationId": "getMinRpsHealth",
@@ -230,6 +214,35 @@
         "summary": "",
         "tags": ["minRPS"]
       }
+    },
+    "/minfactory/users": {
+      "post": {
+        "operationId": "createMinFactoryUser",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MinFactoryUserDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": ["minFactory"]
+      }
     }
   },
   "info": {
@@ -254,11 +267,6 @@
             "type": "string",
             "example": "2025-10-21T18:45:30.000Z"
           },
-          "observerCount": {
-            "type": "number",
-            "example": 1,
-            "minimum": 0
-          },
           "id": {
             "type": "string",
             "example": "550e8400-e29b-41d4-a716-446655440000",
@@ -270,13 +278,18 @@
             "maxLength": 16,
             "minLength": 2
           },
+          "observerCount": {
+            "type": "number",
+            "example": 1,
+            "minimum": 0
+          },
           "playerCount": {
             "type": "number",
             "example": 1,
             "minimum": 0
           }
         },
-        "required": ["createdAt", "observerCount", "id", "name", "playerCount"]
+        "required": ["createdAt", "id", "name", "observerCount", "playerCount"]
       },
       "MinRpsCreateGameDto": {
         "type": "object",
@@ -342,6 +355,26 @@
           }
         },
         "required": ["player1Move", "player2Move", "result"]
+      },
+      "MinFactoryUserDto": {
+        "type": "object",
+        "properties": {
+          "createdAt": {
+            "format": "date-time",
+            "type": "string",
+            "example": "2025-10-21T18:45:30.000Z"
+          },
+          "email": {
+            "type": "string",
+            "example": "user@example.com"
+          },
+          "id": {
+            "type": "string",
+            "example": "550e8400-e29b-41d4-a716-446655440000",
+            "format": "uuid"
+          }
+        },
+        "required": ["createdAt", "email", "id"]
       }
     }
   }
