# server/src/features/minfactory/mapper/minfactory-user-domain.mapper.ts
@@ -1,0 +1,24 @@
+import { MinFactoryUser } from '../models/domains/minfactory-user';
+import { MinFactoryUserDto } from '../models/dtos/minfactory-user.dto';
+import { MinFactoryUserEntity } from '../models/entities/minfactory-user.entity';
+
+export class MinFactoryUserDomainMapper {
+  public static domainToDto(domain: MinFactoryUser): MinFactoryUserDto {
+    const dto: MinFactoryUserDto = new MinFactoryUserDto();
+
+    dto.id = domain.id;
+    dto.email = domain.email;
+    dto.createdAt = domain.createdAt;
+
+    return dto;
+  }
+
+  public static domainToEntity(domain: MinFactoryUser): MinFactoryUserEntity {
+    const entity: MinFactoryUserEntity = new MinFactoryUserEntity();
+
+    entity.firebaseUid = domain.firebaseUid;
+    entity.email = domain.email;
+
+    return entity;
+  }
+}
