# server/src/features/minfactory/models/domains/minfactory-user.ts
@@ -1,0 +1,6 @@
+export class MinFactoryUser {
+  public createdAt: Date = new Date();
+  public email: string = '';
+  public firebaseUid: string = '';
+  public id: string = '';
+}
